tout les fichiers
c'est tout les fichiers

--- a/index.html
+++ b/index.html
@@ -26,9 +26,21 @@
         <div class="hotspot nav" data-scene="scene1" data-target="scene4" id="table"></div>
         <div class="hotspot nav" data-scene="scene1" data-target="scene5" id="poubelle"></div>
 
+        <div class="hotspot nav" data-scene="planlargemurpapier" data-target="hublotrouge" id="hublot"></div>
+        <div class="hotspot nav" data-scene="planlargemurpapier" data-target="murchair" id="mur-gauche"></div>
+        <div class="hotspot nav" data-scene="planlargemurpapier" data-target="murchair" id="mur-haut"></div>
+        <div class="hotspot nav" data-scene="planlargemurpapier" data-target="tablechair" id="table"></div>
+        <div class="hotspot nav" data-scene="hublotrouge" data-target="hublotoeil" id="hublot-oeil"></div>
+
         <div class="hotspot nav" data-scene="scene5" data-target="poubelle" id="trappe-poubelle"></div>
 
         <div class="hotspot nav" data-scene="scene2" data-target="hublotproche" id="hublotproche"></div>
+
+        <div class="hotspot nav" data-scene="scene4" data-target="tablepapier1" id="tablepapier1"></div>
+        <div class="hotspot nav" data-scene="tablepapier1" data-target="tablepapier2" id="tablepapier2"></div>
+        <div class="hotspot nav" data-scene="tablepapier2" data-target="tablepapiervide" id="tablepapiervide"></div>
+        <div class="hotspot nav" data-scene="tablechair" data-target="toutchair" id="toutchair"></div>
+        
 
 
 
@@ -36,6 +48,11 @@
         <div class="hotspot popup-only" data-scene="poubelle" id="texte-poubelle"></div>
         <div class="hotspot popup-only" data-scene="hublotproche" id="texte-hublotnormal"></div>
         <div class="hotspot popup-only" data-scene="scene3" id="texte-mur"></div>
+        <div class="hotspot popup-only" data-scene="murchair" id="texte-mur-chair"></div>
+        <div class="hotspot popup-only" data-scene="tablepapier1" id="papier1"></div>
+        <div class="hotspot popup-only" data-scene="tablepapier2" id="papier2"></div>
+        <div class="hotspot popup-only" data-scene="murchairbouche" id="textebouche"></div>
+        <div class="hotspot popup-only" data-scene="hublotoeil" id="texteoeil"></div>
       </div>
     </div>
   </div>
@@ -48,6 +65,95 @@
     </div>
     <div class="popup-content">
       c'est le sol
+    </div>
+  </div>
+
+  <div class="popup hidden" id="popup-texteoeil">
+    <div class="popup-header">
+      Sous les projecteurs
+      <button class="close">✕</button>
+    </div>
+    <div class="popup-content">
+      Tu as trop attendu. Tu as trop réfléchi, tu as sombré trop profond. Regarde toi, bloquée ici alors que tout le monde t'attends dehors, et te regarde t'enfoncer, encore un peu plus profond chaque seconde. Leur regard pèse sur toi, et la pression extérieure parait infime, si infime, face au poids des attentes qui s'accrochent et se plantent dans tes épaules comme des griffes, et qui grattent sous ton crâne comme des pinces, et qui t'observent, qui t'observent et emplissent l'espace jusqu'à ce que tu n'ai plus aucun espace pour exister.
+    </div>
+  </div>
+
+  <div class="popup hidden" id="popup-textebouche">
+    <div class="popup-header">
+      Blessure
+      <button class="close">✕</button>
+    </div>
+    <div class="popup-content">
+      Alors tu plantes des dents dans une plaie, et tu l'agrandis. Tu écartes la chair, de plus en plus, et tu plonges dans la mâchoire que tu as toi même ouverte. Serpent, Ouroboros, lambeau de peau entortillé sur lui même. Un ruban de Moebius, une boulette de muscle et d'os, pliée en quatre, posée par terre, qui se dévore petit à petit, et qui ne voit plus rien d'autre qu'elle même.
+    </div>
+  </div>
+
+  <div class="popup hidden" id="popup-tout-chair">
+    <div class="popup-header">
+      Faire corps
+      <button class="close">✕</button>
+    </div>
+    <div class="popup-content">
+      A force de creuser, tu as touché le fond. Tu es arrivé au coeur de la chair, au coeur de la matière, tu vois la pièce telle qu'elle est réellement.
+Peut-être que c'est ça, la sortie. Peut être que ca consiste à accepter qu'une partie de toi sera toujours bloqué à l'intérieur, à fusionner avec la matière, et à défaut de pouvoir sortir, de faire corps et de devenir la prison. Tu as passé tellement de temps à regarder à l'intérieur que tu as oublié de regarder en l'air, derrière toi. Tu as oublié de te regarder de l'extérieur. 
+    </div>
+  </div>
+
+
+   <div class="popup hidden" id="popup-papier1">
+    <div class="popup-header">
+      Première page du journal
+      <button class="close">✕</button>
+    </div>
+    <div class="popup-content">
+      Il est 8h du matin à Londres. 
+Démarrage.
+Procédures de réveil….
+Enclenchées.
+La pièce s’illumine lentement alors que les lampes à gaz s’ouvrent. Les rouages grincent, le système se met en place. 
+L’aiguille se met en place. 
+Je me réveille aux premières notes d’Anything Goes. Il faut vraiment que je pense à demander un nouveau vinyle au prochain ravitaillement. Il me semble qu’ils viennent demain ? Après-demain ? C’est bientôt, il me semble.
+Je m'extrait difficilement de mon lit, attrape la manivelle à côté de ma table de nuit, et tourne trois fois vers la droite. La machine à café se met en marche. 
+L’obscurité du petit hublot semble presque vouloir se frayer un chemin à l’intérieur. 
+Le bâtiment entier gémit sous la pression extérieure.
+Je sors de ma chambre, passe devant la porte du laboratoire à ma droite, j’ignore le visage qui semble me fixer au bout du chemin, tourne à gauche au bout du couloir, continue mon chemin tout droit, fais tourner la roue de la porte blindée vers la droite : la routine.
+Je suis accueilli par une atmosphère humide et une odeur d’iode : l’eau du puit central est calme. J’ouvre la porte du frigo au fond à gauche, attrape un des crochets de boucher posé près de l’entrée, et attrape un énorme quartier de viande suspendue. Au début, l’odeur dérange : après, on s’habitue.
+J’enfile le scaphandre, j’ouvre les vannes de gaz. Les lumières dans le puits s’allument une à une. Le sol commence à trembler : 
+Il est réveillé.
+Je saute dans le puits, le crochet en main, traînant le quartier de viande derrière moi.
+
+    </div>
+  </div>
+
+  <div class="popup hidden" id="popup-papier2">
+    <div class="popup-header">
+      Deuxième page du journal
+      <button class="close">✕</button>
+    </div>
+    <div class="popup-content">
+      17 juillet - 3 quartiers de viande, rien à signaler
+
+18 juillet - 3 quartiers de viande, rien à signaler
+
+19 juillet - 3 quartiers de viande, rien à signaler
+
+20 juillet - 3 viande de viande, tremblement de terre moyen
+
+21 juillet - 3 quartiers de viande, rien à signaler
+
+22 juillet - 3 quartiers de viande, léger tremblement de terre
+
+23 juillet - 3 quartiers de viande, viande à signaler
+
+27 jjuillet - 5 quartiers de vviandde, vvviande vidane viannde
+
+28 aoouout - 2 viandde.
+
+30 viande - vianviandede, vianviandede vianviandede vianviandede
+Vianviandede viandviandee - viaviandend
+
+
+
     </div>
   </div>
 
@@ -69,12 +175,94 @@
 
   <div class="popup hidden" id="popup-texte-mur">
     <div class="popup-header">
-      Le mur
+      Face au mur
       <button class="close">✕</button>
     </div>
     <div class="popup-content">
-      C le mur lol
+      Le bruit de l'acier qui se tord, le frottement du métal contre le métal. Des mur épais, très épais même, une protection contre la pression de l'extérieur. Des murs d'armure. Mais aussi des murs de prison. Des murs fins, tout fins, qui n'empêchent pas la pression de s'accumuler à l'intérieur. Le bruit d'une prison qui te tord, le frottement de la chair contre le métal.
     </div>
+  </div>
+
+  <div class="popup hidden" id="popup-texte-mur-chair">
+    <div class="popup-header">
+      Face au mur
+      <button class="close">✕</button>
+    </div>
+    <div class="popup-content">
+      Tu n'as pas su écrire les mots, alors tu les as gravé dans ta chair.
+Dans l'espoir que le tissu cicatriciel te survive, dans l'espoir que la prose te transcende. Chaque émotion, chaque larme, chaque accès de colère est une blessure ouverte, un nerf à vif, une brulure de cigarette sur un mur de chair qui marque et qui saigne. Tu hurles cette douleur et cette rage et tu la grave le plus profondément possible. Tu hurles fort, mais tu ne dis plus grand chose.
+    </div>
+  </div>
+
+  <div class="popup hidden" id="popup-mur-chair-1">
+    <div class="popup-header">
+      Arrête
+      <button class="close">✕</button>
+    </div>
+    <div class="popup-content">
+      Tu me fais mal
+    </div>
+  </div>
+
+   <div class="popup hidden" id="popup-mur-chair-2">
+    <div class="popup-header">
+      Le sang coule
+      <button class="close">✕</button>
+    </div>
+    <div class="popup-content">
+      Tu creuses avec tes doigts directement dans la chair
+    </div>
+  </div>
+
+  <div class="popup hidden" id="popup-mur-chair-3">
+    <div class="popup-header">
+      Le sang recouvre tes doigts
+      <button class="close">✕</button>
+    </div>
+    <div class="popup-content">
+      Tu écris en rouge directement sur le mur
+    </div>
+  </div>
+
+
+  <!-- Popup table vide -->
+
+
+   <div class="popup hidden" id="popup-table-vide">
+    <div class="popup-header">
+      <button class="close">✕</button>
+    </div>
+    <div class="popup-content">
++*+*###++**###*##*#*+###%#*#*=####*+-#%######*###*###**##*+*##*+#%%#==*#+###**##***####%***#####*###
+**+=+=+****+###**-=***###**##+=*##+++-+####*#%#+##*###+*#***#*#%%*##*#+=#%%%##**###*#*+#+######*=*##
++#*#==****+###+****=**%%####+*##*##*=--#%####*##*###%%%#**%##+*%#####%+##%%#+#%#*#*#+--+***=*#*##*#*
+#%#+-=*#*##*###%#*=*#####+***###*####***=::+#%###%#####*#%%###+*##+*%+%%#%##*%##+**#*#**#+*#####**#*
+#*+-++++*#+#*#*%#**##*##*-+#**####%##**==+#%##%######+*#%#***##*##*+=#######%%%*#*#+**#*+*#####+*#**
+#%%#==##%#*+*%#####=*#*#***%##%##%#%#*#+-*%%%#%%##%##%#*#%#+***#*+**++**+#%#*=**#%###*+*+*##*#*#*#%#
+#*+#+#+*####+#####*=+###=+#####%*%#####+:=#*+#**#***++##+=*##+#+=+###*###***##%#*#**#**+****+*###*##
+*-*#+*-*###*#%%%#%%*=+*+=***%#%%%%%%#*=-*#*++##%###%#*+**+*##*=*##%*####*+*-:++*##*+##**=***#*****##
+-+####=###%##%##%#*=*##*###+%*%#%#%##=:*+##*#%#%%####%#%##+*####*#####*##*#*===+**#%####*****++*##*#
+*##%##**#*####*%%*=###%##%#*#%%*##*#+:=#+%#+##%%##%%%%*##%+*##*#*%###########*+=*#####%#####****##+#
+*#####**#+*##%%%*##%####%%#=+%#*##*=::-*#*#%#%%%####*+*%+++*##++######%#%%#%#####**#+*#%%*#*######**
+####**#*#*##%%**##*#%###*##++%##*+=:-**%#*%%###%%%##**#%##**+#####**%%%##%%####***+=#%####*##%######
+##*+*##*%###*%%+*###%#%##%+*%##*-:--*%**####%%#*%%%#*+#*#*#%%#%%##%%%%%%%#%%%#+##*+#%%*#%#**#*+*%%#*
+#***+#*##+*##%+*####%+#%%#*%%##=**-#%#%%##%#%###%#*--*+==#%%%#+*#%%%####*%%######+*##+*#%%%%########
+###*+:--=*###*+#%%%#+#%%**###+=:--*###*%%#%%##%#*-=%%#%#+%%#=#%%#%%%*%%%%##**+*=::=+*#**%%%%##*###*#
+*+**=*=+**#**%#%%###*%#+##*##=---########%#%%%#=*%%%%%%*#%%%*#%%%%%%%#*%%###++-*%#*#%%%#%%#%##+#####
++*#%#%#%%#=*%%#%%##**#*%###*==++#%###%#*%%###+-#%%%%#%*%#%#%*#%%%##%%##%%#*=:+%%%##%%%%######**##*+#
+#%%%%*%%%%%*##*+*#%%%+%%**#+::-##%%#%#%%##*-:--#%%%%%+%%%%#%%*#%#***++*+++::#%%%%%%%#####%%%##=*####
+%%%+#%%%*=##+**+%%%%#*##*+*-::--=++****##+=-#%##%%##=+#%%%#**#+==***#*+=-:-##%%%%%%%%%#*++*=*#%#####
+#*###%#=+#%%%*#*##*+=*#*+-::=#%%%%#%=%%%#%*+%%%%%%%#**===++#%%%%#%%%##*=:-#%##%%%####*%##*=##%%##*#*
+%%%*%*-#**#**+*#*#*+#*+=::-#%%%%#%%+%%%%%%#*#%%%##%%%%%#+*+%%%%%%%%##*+--=##%%######++###+####+#%#-#
+%%##*=#####**#*+#*+-==::-#%%%%##%##%%%%%%%#*+%#+#%#*###+#+*#%%%%%####+--*##%%%%%##%######=###%##+#*#
+%##=**##%#*##%#####+:::=#%%%%*###%%#%###%%%%+*#*%#%%%#%%%#%**###%%##*=:*%%%#%###*##*=+****#%###*####
+#*=%####+##*##+++=:-:::-=*#**%##%###%%%%##%#*-*#*#**###**######**#+=-:=%%%%##%%#%##+=--*#####+***###
+=-#%%*#*##%##=:-=###*#++=-:--==+*=+***#*#*#*=:*#+++**#%%%##****###*+-:*%%%%%%%#*==-+###%####****#*+*
++**###+*%%#=*#%%*#%###*##+-:=##***##%#####%*-#%#%#+######*%%%*#%**+=:-+%%#++##%#########%#%*######%#
+++*+*##%++*####*%%###-#*+=:=%#**#*##*%#+#%#-%%##%*##*%**#%%%##%%#**=--:--+####=#%%####%##*#######%#*
+*=#**+***###***#+#%%#=+**-:=*%#*%%%##%###::#%%%%%%#%+*%#%%##%####*+--+####%%#%#+-:+*##***####%######
+#*=*+*###%#+****######+*+-:=+%%#####%%#+*-*#%##%##%%#%%%##%#%#*+-:-*%%#*#%#*##*==##%##*+*+**##++=++#
+++++**#%##%#*%%%###*+##=*+=-=+#+##**#**#*:*%**%#%#%%#%#+=#%%#**+:=##%%%###%%#+-#%#####****##*######*    </div>
   </div>
 
   <!-- Popup hublot Normal -->
@@ -152,7 +340,7 @@
     </div>
     <div class="popup-content">
       ARRÊTE ARRÊTE ARRÊTE ARRÊTE ARRÊTE ARRÊTE ARRÊTE ARRÊTE ARRÊTE ARRÊTE ARRÊTE ARRÊTE ARRÊTE ARRÊTE ARRÊTE ARRÊTE
-      ARRÊTE ARRÊTE ARRÊTE ARRÊTE ARRÊTE ARRÊTE ARRÊTE ARRÊTE ARRÊTE ARRÊTEv
+      ARRÊTE ARRÊTE ARRÊTE ARRÊTE ARRÊTE ARRÊTE ARRÊTE ARRÊTE ARRÊTE ARRÊTE
     </div>
   </div>
 
