--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Point & Click</title>
+  <title>Au Coin</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
